# Juggler-crackme

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  key.txt  trim_dll_headers.py
asm/: tricks.asm
c_aes/: aes_dll.c  aes_dll_nocrt.dll.i64  make.bat  make_microsoft.bat  make_microsoft_no_crt.bat  make_nocrt.bat  res1.rc  stub.asm  test.c
c_aes/aes_lib/: aes.c  constants.c
c_verification/: encrypter.py  hook.asm  make.bat  make_gcc_nocrt.bat  make_microsoft_nocrt.bat  memset_crt_fuck.c  mod2.dll.enc  mod2_nocrt.exp  mod2_nocrt.lib  res2.rc  verification.c
c_verification/lib_hook/: Zydis.h  winhook.h  winhook.lib
src/: asm_macros.rs  main.rs  warden.rs
src/winapi_cs/: core.rs  mod.rs  reflective_dll.rs  utils.rs
zig_key_derivation/: build.zig  build.zig.zon
zig_key_derivation/.zig-cache/o/664d9d09cf23b1a5fdcd914e36c23e4d/: zig_key_derivation.lib
zig_key_derivation/.zig-cache/o/c38dff19689a8d46f5303ac18d126e04/: zig_key_derivation.lib
zig_key_derivation/src/: main.zig  root.zig  thread_safe_memcpy.asm
