[package]
name = "juggler"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "winnt", "minwindef", "winbase", "winuser", "errhandlingapi"] }
crc32fast = "1.2.1"

[build-dependencies]
embed-resource = "1.6.1"
